--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -561,8 +561,8 @@ EXPORT DATE: 03 March 2025
 @article{unal2023meta,
 	abbr         = {TMLR},
 	title        = {TEMPLATE},
-	author       = {Unal, A. and Akg{\"u}l, A. and Kandemir, M. and Unal, G.},
-	year         = {2023},
+	author       = {T Test},
+	year         = {1700},
 	journal      = tmlr,
 	url          = {https://openreview.net/forum?id=},
 	html         = {https://openreview.net/forum?id=},
