--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,7 @@
 
 
 
-@ARTICLE{Kocer2018455,
+@article{Kocer2018455,
 	author = {Kocer, Basaran Bahadir and Tjahjowidodo, Tegoeh and Seet, Gerald Gim Lee},
 	title = {Centralized predictive ceiling interaction control of quadrotor VTOL UAV},
 	year = {2018},
@@ -45,7 +45,7 @@
 	note = {Cited by: 11}
 }
 
-@ARTICLE{Stephens202211902,
+@article{Stephens202211902,
 	author = {Stephens, Brett and Orr, Lachlan and Kocer, Basaran Bahadir and Nguyen, Hai-Nguyen and Kovac, Mirko},
 	title = {An Aerial Parallel Manipulator With Shared Compliance},
 	year = {2022},
@@ -90,7 +90,7 @@
 	selected = {true}
 }
 
-@ARTICLE{Bates2025,
+@article{Bates2025,
 	author = {Bates, Elizabeth and Popović, Marija and Marsh, Conor and Clark, Ronald and Kovac, Mirko and Kocer, Basaran Bahadir},
 	title = {Leaf level Ash Dieback Disease Detection and Online Severity Estimation with UAVs},
 	year = {2025},
@@ -186,7 +186,7 @@
 	note = {Cited by: 12}
 }
 
-@ARTICLE{Eren20171541,
+@article{Eren20171541,
 	author = {Eren, Utku and Prach, Anna and Koçer, Basaran Bahadir and Rakovic, Saša V. and Kayacan, Erdal and Açikmese, Behçet},
 	title = {Model predictive control in aerospace systems: Current state and opportunities},
 	year = {2017},
@@ -215,7 +215,7 @@
 	note = {Cited by: 2}
 }
 
-@ARTICLE{Dams202434606,
+@article{Dams202434606,
 	author = {Dams, Barrie and Chen, Binling and Kaya, Yusuf Furkan and Orr, Lachlan and Kocer, Basaran Bahadir and Shepherd, Paul and Kovac, Mirko and Ball, Richard J.},
 	title = {Fresh Properties and Autonomous Deposition of Pseudoplastic Cementitious Mortars for Aerial Additive Manufacturing},
 	year = {2024},
@@ -230,7 +230,7 @@
 	note = {Cited by: 3; All Open Access, Gold Open Access, Green Open Access}
 }
 
-@ARTICLE{Zhang2022709,
+@article{Zhang2022709,
 	author = {Zhang, Ketao and Chermprayong, Pisak and Xiao, Feng and Tzoumanikas, Dimos and Dams, Barrie and Kay, Sebastian and Kocer, Basaran Bahadir and Burns, Alec and Orr, Lachlan and Choi, Christopher and Darekar, Durgesh Dattatray and Li, Wenbin and Hirschmann, Steven and Soana, Valentina and Ngah, Shamsiah Awang and Sareh, Sina and Choubey, Ashutosh and Margheri, Laura and Pawar, Vijay M. and Ball, Richard J. and Williams, Chris and Shepherd, Paul and Leutenegger, Stefan and Stuart-Smith, Robert and Kovac, Mirko},
 	title = {Aerial additive manufacturing with multiple autonomous robots},
 	year = {2022},
@@ -247,7 +247,7 @@
 	selected = {true}
 }
 
-@ARTICLE{Zheng20206845,
+@article{Zheng20206845,
 	author = {Zheng, Peter and Tan, Xinkai and Kocer, Basaran Bahadir and Yang, Erdeng and Kovac, Mirko},
 	title = {TiltDrone: A Fully-Actuated Tilting Quadrotor Platform},
 	year = {2020},
@@ -289,7 +289,7 @@
 	note = {Cited by: 15}
 }
 
-@ARTICLE{Ho202275,
+@article{Ho202275,
 	author = {Ho, Boon and Kocer, Basaran Bahadir and Kovac, Mirko},
 	title = {Vision based crown loss estimation for individual trees with remote aerial robots},
 	year = {2022},
@@ -360,7 +360,7 @@
 	note = {Cited by: 3}
 }
 
-@ARTICLE{Dams2024,
+@article{Dams2024,
 	author = {Dams, Barrie and Orr, Lachlan and Kaya, Yusuf Furkan and Kocer, Basaran Bahadir and Shepherd, Paul and Kovac, Mirko and Ball, Richard J.},
 	title = {Deposition dynamics and analysis of polyurethane foam structure boundaries for aerial additive manufacturing},
 	year = {2024},
@@ -390,7 +390,7 @@
 	note = {Cited by: 2; All Open Access, Green Open Access}
 }
 
-@ARTICLE{Kocer2019,
+@article{Kocer2019,
 	author = {Kocer, Basaran Bahadir and Tjahjowidodo, Tegoeh and Pratama, Mahardhika and Seet, Gerald Gim Lee},
 	title = {Inspection-while-flying: An autonomous contact-based nondestructive test using UAV-tools},
 	year = {2019},
@@ -476,7 +476,7 @@
 	note = {Cited by: 10}
 }
 
-@ARTICLE{Xiao20213144,
+@article{Xiao20213144,
 	author = {Xiao, Feng and Zheng, Peter and Tria, Julien Di and Kocer, Basaran Bahadir and Kovac, Mirko},
 	title = {Optic Flow-Based Reactive Collision Prevention for MAVs Using the Fictitious Obstacle Hypothesis},
 	year = {2021},
@@ -505,7 +505,7 @@
 	note = {Cited by: 0}
 }
 
-@ARTICLE{Kocer201947,
+@article{Kocer201947,
 	author = {Kocer, Basaran Bahadir and Tjahjowidodo, Tegoeh and Seet, Gerald Gim Lee},
 	title = {Model predictive UAV-tool interaction control enhanced by external forces},
 	year = {2019},
@@ -520,7 +520,7 @@
 	note = {Cited by: 25; All Open Access, Green Open Access}
 }
 
-@ARTICLE{Zhang2024E5,
+@article{Zhang2024E5,
 	author = {Zhang, Ketao and Chermprayong, Pisak and Xiao, Feng and Tzoumanikas, Dimos and Dams, Barrie and Kay, Sebastian and Kocer, Basaran Bahadir and Burns, Alec and Orr, Lachlan and Alhinai, Talib and Choi, Christopher and Darekar, Durgesh Dattatray and Li, Wenbin and Hirschmann, Steven and Soana, Valentina and Ngah, Shamsiah Awang and Grillot, Clément and Sareh, Sina and Choubey, Ashutosh and Margheri, Laura and Pawar, Vijay M. and Ball, Richard J. and Williams, Chris and Shepherd, Paul and Leutenegger, Stefan and Stuart-Smith, Robert and Kovac, Mirko},
 	title = {Correction to: Aerial additive manufacturing with multiple autonomous robots (Nature, (2022), 609, 7928, (709-717), 10.1038/s41586-022-04988-4)},
 	year = {2024},
