--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,552 +16,32 @@
 
 
 
-@article{Kocer2018455,
-	author = {Kocer, Basaran Bahadir and Tjahjowidodo, Tegoeh and Seet, Gerald Gim Lee},
-	title = {Centralized predictive ceiling interaction control of quadrotor VTOL UAV},
-	year = {2018},
-	journal = {Aerospace Science and Technology},
-	volume = {76},
-	pages = {455 – 465},
-	doi = {10.1016/j.ast.2018.02.020},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85042878120&doi=10.1016%2fj.ast.2018.02.020&partnerID=40&md5=398fb1eb52af0e9cc3a91025fce90df5},
-	type = {Article},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 52}
-}
-
-@CONFERENCE{Maslim2015,
-	author = {Maslim, Reinaldo and Chaoyi, He and Yixi, Zeng and Linhao, Jin and Kocer, Basaran Bahadir and Kayacan, Erdal},
-	title = {Performance evaluation of adaptive and nonadaptive fuzzy structures for 4D trajectory tracking of quadrotors: A comparative study},
-	year = {2015},
-	journal = {IEEE International Conference on Fuzzy Systems},
-	volume = {2015-November},
-	doi = {10.1109/FUZZ-IEEE.2015.7337945},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-84975747704&doi=10.1109%2fFUZZ-IEEE.2015.7337945&partnerID=40&md5=5a0c562de5e69ca22fa8c30c9d31ef53},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 11}
-}
-
-@article{Stephens202211902,
-	author = {Stephens, Brett and Orr, Lachlan and Kocer, Basaran Bahadir and Nguyen, Hai-Nguyen and Kovac, Mirko},
-	title = {An Aerial Parallel Manipulator With Shared Compliance},
-	year = {2022},
-	journal = {IEEE Robotics and Automation Letters},
-	volume = {7},
-	number = {4},
-	pages = {11902 – 11909},
-	doi = {10.1109/LRA.2022.3205111},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85137890008&doi=10.1109%2fLRA.2022.3205111&partnerID=40&md5=c6c1e4d7a65736cc324c72e45c22a833},
-	type = {Article},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 10; All Open Access, Green Open Access}
-}
-
-@BOOK{Wang2024337,
-	author = {Wang, Zhounan and Zheng, Peter and Kocer, Basaran Bahadir and Kovac, Mirko},
-	title = {Drone-Based Solar Cell Inspection With Autonomous Deep Learning},
-	year = {2024},
-	journal = {Infrastructure Robotics: Methodologies, Robotic Systems and Applications},
-	pages = {337 – 365},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85191788993&partnerID=40&md5=2bddf38203859d2361216ea74c8a5d62},
-	type = {Book chapter},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 1}
-}
-
-@CONFERENCE{Kocer2021110,
-	author = {Kocer, Basaran Bahadir and Hady, Mohamad Abdul and Kandath, Harikumar and Pratama, Mahardhika and Kovac, Mirko},
-	title = {Deep Neuromorphic Controller with Dynamic Topology for Aerial Robots},
-	year = {2021},
-	journal = {Proceedings - IEEE International Conference on Robotics and Automation},
-	volume = {2021-May},
-	pages = {110 – 116},
-	doi = {10.1109/ICRA48506.2021.9561729},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85119080609&doi=10.1109%2fICRA48506.2021.9561729&partnerID=40&md5=b8bd393ac383e43e4cad3478f343cb80},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 8},
-	selected = {true}
-}
-
-@article{Bates2025,
-	author = {Bates, Elizabeth and Popović, Marija and Marsh, Conor and Clark, Ronald and Kovac, Mirko and Kocer, Basaran Bahadir},
-	title = {Leaf level Ash Dieback Disease Detection and Online Severity Estimation with UAVs},
-	year = {2025},
-	journal = {IEEE Access},
-	doi = {10.1109/ACCESS.2025.3541980},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85217947664&doi=10.1109%2fACCESS.2025.3541980&partnerID=40&md5=c7ec16f0015c249d53aed132adf8ef8c},
-	type = {Article},
-	publication_stage = {Article in press},
-	source = {Scopus},
-	note = {Cited by: 0; All Open Access, Gold Open Access}
-}
-
-@CONFERENCE{Stedman2022104,
-	author = {Stedman, Harvey and Kocer, Basaran Bahadir and Kovac, Mirko and Pawar, Vijay M.},
-	title = {VRTAB-Map: A Configurable Immersive Teleoperation Framework with Online 3D Reconstruction},
-	year = {2022},
-	journal = {Proceedings - 2022 IEEE International Symposium on Mixed and Augmented Reality Adjunct, ISMAR-Adjunct 2022},
-	pages = {104 – 110},
-	doi = {10.1109/ISMAR-Adjunct57072.2022.00029},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85146054144&doi=10.1109%2fISMAR-Adjunct57072.2022.00029&partnerID=40&md5=943d40065d5dc71119438635542a20ae},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 4; All Open Access, Green Open Access}
-}
-
-@CONFERENCE{Öztürk2013693,
-	author = {Öztürk, Muhammet and Koçer, Bahadir and Uygun, Recep},
-	title = {Design of sma based actuators used in robotics},
-	year = {2013},
-	journal = {Nature-Inspired Mobile Robotics: Proceedings of the 16th International Conference on Climbing and Walking Robots and the Support Technologies for Mobile Machines, CLAWAR 2013},
-	pages = {693 – 700},
-	doi = {10.1142/9789814525534_0087},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-84891356884&doi=10.1142%2f9789814525534_0087&partnerID=40&md5=7d20f081e4a87a3c5d69afac2d79f97c},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 0}
-}
-
-@CONFERENCE{Orr2021,
-	author = {Orr, Lachlan and Stephens, Brett and Kocer, Basaran Bahadir and Kovac, Mirko},
-	title = {A High Payload Aerial Platform for Infrastructure Repair and Manufacturing},
-	year = {2021},
-	journal = {AIRPHARO 2021 - 1st AIRPHARO Workshop on Aerial Robotic Systems Physically Interacting with the Environment},
-	doi = {10.1109/AIRPHARO52252.2021.9571052},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85119061908&doi=10.1109%2fAIRPHARO52252.2021.9571052&partnerID=40&md5=18c7304eadcd96c03cf27726b5d82663},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 9}
-}
-
-@CONFERENCE{Chen201991,
-	author = {Chen, Leong Jing and Henawy, John and Kocer, Basaran Bahadir and Seet, Gerald Gim Lee},
-	title = {Aerial robots on the way to underground: An experimental evaluation of VINS-mono on visual-inertial odometry camera},
-	year = {2019},
-	journal = {IEEE International Conference on Data Mining Workshops, ICDMW},
-	volume = {2019-November},
-	pages = {91 – 96},
-	doi = {10.1109/ICDMW.2019.00024},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85078769708&doi=10.1109%2fICDMW.2019.00024&partnerID=40&md5=a1396056d4538585455e4b846f118b9e},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 10}
-}
-
-@CONFERENCE{Nicholas2016,
-	author = {Nicholas, Ng Jun Hao and Kocer, Basaran Bahadir and Kayacan, Erdal and Yee, Yeong Wai},
-	title = {Piezoceramic materials for energy harvesting on 3D printed unmanned aerial vehicles: A feasibility study},
-	year = {2016},
-	journal = {IEEE Region 10 Humanitarian Technology Conference, R10-HTC 2015 - co-located with 8th International Conference on Humanoid, Nanotechnology, Information Technology, Communication and Control, Environment and Management, HNICEM 2015},
-	doi = {10.1109/R10-HTC.2015.7391845},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-84964969143&doi=10.1109%2fR10-HTC.2015.7391845&partnerID=40&md5=9a19f3b948da721e6f7724f4f90a9d0b},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 2}
-}
-
-@CONFERENCE{Kocer2013389,
-	author = {Kocer, Basaran Bahadir and Omurlu, Vasfi Emre and Akdogan, Erhan and Tufekci, Celal Sami},
-	title = {Development of a MEMs-based IMU Unit},
-	year = {2013},
-	journal = {RAST 2013 - Proceedings of 6th International Conference on Recent Advances in Space Technologies},
-	pages = {389 – 393},
-	doi = {10.1109/RAST.2013.6581237},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-84883889651&doi=10.1109%2fRAST.2013.6581237&partnerID=40&md5=df1983481e479652173c0c1d8e11a816},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 12}
-}
-
-@article{Eren20171541,
-	author = {Eren, Utku and Prach, Anna and Koçer, Basaran Bahadir and Rakovic, Saša V. and Kayacan, Erdal and Açikmese, Behçet},
-	title = {Model predictive control in aerospace systems: Current state and opportunities},
-	year = {2017},
-	journal = {Journal of Guidance, Control, and Dynamics},
-	volume = {40},
-	number = {7},
-	pages = {1541 – 1566},
-	doi = {10.2514/1.G002507},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85020712736&doi=10.2514%2f1.G002507&partnerID=40&md5=c07f84bdf15ebb377d2279df55389516},
-	type = {Article},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 273}
-}
-
-@BOOK{Kaya2024367,
-	author = {Kaya, Yusuf Furkan and Orr, Lachlan and Kocer, Basaran Bahadir and Kovac, Mirko},
-	title = {Aerial Repair and Aerial Additive Manufacturing},
-	year = {2024},
-	journal = {Infrastructure Robotics: Methodologies, Robotic Systems and Applications},
-	pages = {367 – 384},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85191825020&partnerID=40&md5=f368db92f1b9f64623e1a63b3e8e9042},
-	type = {Book chapter},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 2}
-}
-
-@article{Dams202434606,
-	author = {Dams, Barrie and Chen, Binling and Kaya, Yusuf Furkan and Orr, Lachlan and Kocer, Basaran Bahadir and Shepherd, Paul and Kovac, Mirko and Ball, Richard J.},
-	title = {Fresh Properties and Autonomous Deposition of Pseudoplastic Cementitious Mortars for Aerial Additive Manufacturing},
-	year = {2024},
-	journal = {IEEE Access},
-	volume = {12},
-	pages = {34606 – 34631},
-	doi = {10.1109/ACCESS.2024.3373188},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85187339875&doi=10.1109%2fACCESS.2024.3373188&partnerID=40&md5=4ae777ed2b348413b30c9be8b292e676},
-	type = {Article},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 3; All Open Access, Gold Open Access, Green Open Access}
-}
-
-@article{Zhang2022709,
-	author = {Zhang, Ketao and Chermprayong, Pisak and Xiao, Feng and Tzoumanikas, Dimos and Dams, Barrie and Kay, Sebastian and Kocer, Basaran Bahadir and Burns, Alec and Orr, Lachlan and Choi, Christopher and Darekar, Durgesh Dattatray and Li, Wenbin and Hirschmann, Steven and Soana, Valentina and Ngah, Shamsiah Awang and Sareh, Sina and Choubey, Ashutosh and Margheri, Laura and Pawar, Vijay M. and Ball, Richard J. and Williams, Chris and Shepherd, Paul and Leutenegger, Stefan and Stuart-Smith, Robert and Kovac, Mirko},
-	title = {Aerial additive manufacturing with multiple autonomous robots},
-	year = {2022},
-	journal = {Nature},
-	volume = {609},
-	number = {7928},
-	pages = {709 – 717},
-	doi = {10.1038/s41586-022-04988-4},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85138234388&doi=10.1038%2fs41586-022-04988-4&partnerID=40&md5=fde376b30c747b1ea281ddfe14909b41},
-	type = {Article},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 129},
-	selected = {true}
-}
-
-@article{Zheng20206845,
-	author = {Zheng, Peter and Tan, Xinkai and Kocer, Basaran Bahadir and Yang, Erdeng and Kovac, Mirko},
-	title = {TiltDrone: A Fully-Actuated Tilting Quadrotor Platform},
-	year = {2020},
-	journal = {IEEE Robotics and Automation Letters},
-	volume = {5},
-	number = {4},
-	pages = {6845 – 6852},
-	doi = {10.1109/LRA.2020.3010460},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85089657962&doi=10.1109%2fLRA.2020.3010460&partnerID=40&md5=29a57dbf5366787ac984574e0d1a7aab},
-	type = {Article},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 87; All Open Access, Green Open Access, Hybrid Gold Open Access}
-}
-
-@CONFERENCE{Guruge2016,
-	author = {Guruge, Prasanna and Kocer, Basaran Bahadir and Kayacan, Erdal},
-	title = {A novel automatic UAV launcher design by using bluetooth low energy integrated electromagnetic releasing system},
-	year = {2016},
-	journal = {IEEE Region 10 Humanitarian Technology Conference, R10-HTC 2015 - co-located with 8th International Conference on Humanoid, Nanotechnology, Information Technology, Communication and Control, Environment and Management, HNICEM 2015},
-	doi = {10.1109/R10-HTC.2015.7391861},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-84964933130&doi=10.1109%2fR10-HTC.2015.7391861&partnerID=40&md5=a0696e9147be7743c687ac7b2f709ded},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 8}
-}
-
-@CONFERENCE{Kocer2021,
-	author = {Kocer, Basaran Bahadir and Ho, Boon and Zhu, Xuanhao and Zheng, Peter and Farinha, Andre and Xiao, Feng and Stephens, Brett and Wiesemuller, Fabian and Orr, Lachlan and Kovac, Mirko},
-	title = {Forest Drones for Environmental Sensing and Nature Conservation},
-	year = {2021},
-	journal = {AIRPHARO 2021 - 1st AIRPHARO Workshop on Aerial Robotic Systems Physically Interacting with the Environment},
-	doi = {10.1109/AIRPHARO52252.2021.9571033},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85119070635&doi=10.1109%2fAIRPHARO52252.2021.9571033&partnerID=40&md5=a37fea665a91cbd41957ad95a2f63df0},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 15}
-}
-
-@article{Ho202275,
-	author = {Ho, Boon and Kocer, Basaran Bahadir and Kovac, Mirko},
-	title = {Vision based crown loss estimation for individual trees with remote aerial robots},
-	year = {2022},
-	journal = {ISPRS Journal of Photogrammetry and Remote Sensing},
-	volume = {188},
-	pages = {75 – 88},
-	doi = {10.1016/j.isprsjprs.2022.04.002},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85128243118&doi=10.1016%2fj.isprsjprs.2022.04.002&partnerID=40&md5=4542143e3d72bea2b6cae6bba5fa4a2f},
-	type = {Article},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 17; All Open Access, Green Open Access, Hybrid Gold Open Access}
-}
-
-@CONFERENCE{Stuart-Smith202344,
-	author = {Stuart-Smith, Robert and Darekar, Durgesh and Danahy, Patrick and Kocer, Basaran Bahadir and Pawar, Vijay and Kovac, Mirko},
-	title = {Collective Aerial Additive Manufacturing},
-	year = {2023},
-	journal = {Hybrids and Haecceities - Proceedings of the 42nd Annual Conference of the Association for Computer Aided Design in Architecture, ACADIA 2022},
-	pages = {44 – 55},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85179012236&partnerID=40&md5=823a32c6a83b01137664dab89ace8ac3},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 2}
-}
-
-@BOOK{Öztürk2013693,
-	author = {Öztürk, Muhammet and Koçer, Bahadir and Uygun, Recep},
-	title = {Design of SMA based actuators used in robotics},
-	year = {2013},
-	journal = {Nature-Inspired Mobile Robotics},
-	pages = {693 – 700},
-	doi = {10.1142/9789814525534_0087},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-84967389309&doi=10.1142%2f9789814525534_0087&partnerID=40&md5=7d257ca71f98d1883316edd4b9f386bb},
-	type = {Book chapter},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 1}
-}
-
-@CONFERENCE{Kocer2018466,
-	author = {Kocer, Basaran Bahadir and Tjahjowidodo, Tegoeh and Lee, Gerald Seet Gim},
-	title = {Constrained estimation-based nonlinear model predictive control for UAV-elastic tool interaction},
-	year = {2018},
-	journal = {IEEE/ASME International Conference on Advanced Intelligent Mechatronics, AIM},
-	volume = {2018-July},
-	pages = {466 – 471},
-	doi = {10.1109/AIM.2018.8452262},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85053931125&doi=10.1109%2fAIM.2018.8452262&partnerID=40&md5=38b30d6bf20d2d2fa4ed196e83d6aa0e},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 6}
-}
-
-@CONFERENCE{Kocer2018978,
-	author = {Kocer, Basaran Bahadir and Tjahjowidodo, Tegoeh and Lee Seet, Gerald Gim},
-	title = {UAV Push Recovery Operation by Symmetrical Control and Estimation in Receding Horizon},
-	year = {2018},
-	journal = {2018 15th International Conference on Control, Automation, Robotics and Vision, ICARCV 2018},
-	pages = {978 – 983},
-	doi = {10.1109/ICARCV.2018.8581186},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85060779572&doi=10.1109%2fICARCV.2018.8581186&partnerID=40&md5=ec77065fd26771fc94fb2210f258a2e7},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 3}
-}
-
-@article{Dams2024,
-	author = {Dams, Barrie and Orr, Lachlan and Kaya, Yusuf Furkan and Kocer, Basaran Bahadir and Shepherd, Paul and Kovac, Mirko and Ball, Richard J.},
-	title = {Deposition dynamics and analysis of polyurethane foam structure boundaries for aerial additive manufacturing},
-	year = {2024},
-	journal = {Virtual and Physical Prototyping},
-	volume = {19},
-	number = {1},
-	doi = {10.1080/17452759.2024.2305213},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85182819280&doi=10.1080%2f17452759.2024.2305213&partnerID=40&md5=cfe9e933ca9d177d89525250d246001f},
-	type = {Article},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 1; All Open Access, Gold Open Access, Green Open Access}
-}
-
-@CONFERENCE{Stedman202311972,
-	author = {Stedman, Harvey and Kocer, Basaran Bahadir and Van Zalk, Nejra and Kovac, Mirko and Pawar, Vijay M.},
-	title = {Evaluating Immersive Teleoperation Interfaces: Coordinating Robot Radiation Monitoring Tasks in Nuclear Facilities},
-	year = {2023},
-	journal = {Proceedings - IEEE International Conference on Robotics and Automation},
-	volume = {2023-May},
-	pages = {11972 – 11978},
-	doi = {10.1109/ICRA48891.2023.10161011},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85168668601&doi=10.1109%2fICRA48891.2023.10161011&partnerID=40&md5=ac71830f652fd8b321da42cafa844342},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 2; All Open Access, Green Open Access}
-}
-
-@article{Kocer2019,
-	author = {Kocer, Basaran Bahadir and Tjahjowidodo, Tegoeh and Pratama, Mahardhika and Seet, Gerald Gim Lee},
-	title = {Inspection-while-flying: An autonomous contact-based nondestructive test using UAV-tools},
-	year = {2019},
-	journal = {Automation in Construction},
-	volume = {106},
-	doi = {10.1016/j.autcon.2019.102895},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85069649579&doi=10.1016%2fj.autcon.2019.102895&partnerID=40&md5=62a79f72035c6044ece47d67541a2640},
-	type = {Article},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 44; All Open Access, Green Open Access}
-}
-
-@CONFERENCE{Kocer20192813,
-	author = {Kocer, Basaran Bahadir and Tiryaki, Mehmet Efe and Pratama, Mahardhika and Tjahjowidodo, Tegoeh and Seet, Gerald Gim Lee},
-	title = {Aerial Robot Control in Close Proximity to Ceiling: A Force Estimation-based Nonlinear MPC},
-	year = {2019},
-	journal = {IEEE International Conference on Intelligent Robots and Systems},
-	pages = {2813 – 2819},
-	doi = {10.1109/IROS40897.2019.8967611},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85081162189&doi=10.1109%2fIROS40897.2019.8967611&partnerID=40&md5=92520b11cf103056902579431a04dd94},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 19; All Open Access, Green Open Access}
-}
-
-@CONFERENCE{Kocer20224919,
-	author = {Kocer, Basaran Bahadir and Stedman, Harvey and Kulik, Patryk and Caves, Izaak and Van Zalk, Nejra and Pawar, Vijay M. and Kovac, Mirko},
-	title = {Immersive View and Interface Design for Teleoperated Aerial Manipulation},
-	year = {2022},
-	journal = {IEEE International Conference on Intelligent Robots and Systems},
-	volume = {2022-October},
-	pages = {4919 – 4926},
-	doi = {10.1109/IROS47612.2022.9981656},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85146056571&doi=10.1109%2fIROS47612.2022.9981656&partnerID=40&md5=e1572f5ff5fb8f85057862c7598bf90e},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 7; All Open Access, Green Open Access}
-}
-
-@CONFERENCE{Kocer2022226,
-	author = {Kocer, Basaran Bahadir and Orr, Lachlan and Stephens, Brett and Kaya, Yusuf Furkan and Buzykina, Tetiana and Khan, Asiya and Kovac, Mirko},
-	title = {An Intelligent Aerial Manipulator for Wind Turbine Inspection and Repair},
-	year = {2022},
-	journal = {2022 13th UKACC International Conference on Control, CONTROL 2022},
-	pages = {226 – 227},
-	doi = {10.1109/Control55989.2022.9781451},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85132247521&doi=10.1109%2fControl55989.2022.9781451&partnerID=40&md5=26b3d098bdecde708a196c977ee25834},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 6; All Open Access, Green Open Access}
-}
-
-@CONFERENCE{Kocer2019193,
-	author = {Kocer, Basaran Bahadir and Kumtepeli, Volkan and Tjahjowidodo, Tegoeh and Pratama, Mahardhika and Tripathi, Anshuman and Seet Gim Lee, Gerald and Wang, Youyi},
-	title = {UAV Control in Close Proximities - Ceiling Effect on Battery Lifetime},
-	year = {2019},
-	journal = {Proceedings - 2019 2nd International Conference on Intelligent Autonomous Systems, ICoIAS 2019},
-	pages = {193 – 197},
-	doi = {10.1109/ICoIAS.2019.00041},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85070899835&doi=10.1109%2fICoIAS.2019.00041&partnerID=40&md5=fa33193976526e62ec3655b48397d71b},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 13; All Open Access, Green Open Access}
-}
-
-@CONFERENCE{Kocer2018472,
-	author = {Kocer, Basaran Bahadir and Lee, Gerald Seet Gim and Tjahjowidodo, Tegoeh},
-	title = {Nonlinear predictive UAV-elastic tool interaction control in real-time},
-	year = {2018},
-	journal = {IEEE/ASME International Conference on Advanced Intelligent Mechatronics, AIM},
-	volume = {2018-July},
-	pages = {472 – 477},
-	doi = {10.1109/AIM.2018.8452328},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85053872138&doi=10.1109%2fAIM.2018.8452328&partnerID=40&md5=675aba4ba130be75f230186fef29df25},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 10}
-}
-
-@article{Xiao20213144,
-	author = {Xiao, Feng and Zheng, Peter and Tria, Julien Di and Kocer, Basaran Bahadir and Kovac, Mirko},
-	title = {Optic Flow-Based Reactive Collision Prevention for MAVs Using the Fictitious Obstacle Hypothesis},
-	year = {2021},
-	journal = {IEEE Robotics and Automation Letters},
-	volume = {6},
-	number = {2},
-	pages = {3144 – 3151},
-	doi = {10.1109/LRA.2021.3062317},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85101811753&doi=10.1109%2fLRA.2021.3062317&partnerID=40&md5=16810bf0962199a1be3eb6ca68a8f2bd},
-	type = {Article},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 18; All Open Access, Green Open Access}
-}
-
-@BOOK{Kocer2018161,
-	author = {Kocer, Basaran Bahadir and Lee, Gerald Seet Gim and Tjahjowidodo, Tegoeh},
-	title = {Constrained estimation-based nonlinear aerial contact predictive control},
-	year = {2018},
-	journal = {Intelligent Marine and Aerial Vehicles: Theory and Applications},
-	pages = {161 – 173},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85077835957&partnerID=40&md5=10fab2e8378640920010a0803562a20f},
-	type = {Book chapter},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 0}
-}
-
-@article{Kocer201947,
-	author = {Kocer, Basaran Bahadir and Tjahjowidodo, Tegoeh and Seet, Gerald Gim Lee},
-	title = {Model predictive UAV-tool interaction control enhanced by external forces},
-	year = {2019},
-	journal = {Mechatronics},
-	volume = {58},
-	pages = {47 – 57},
-	doi = {10.1016/j.mechatronics.2019.01.004},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85060247398&doi=10.1016%2fj.mechatronics.2019.01.004&partnerID=40&md5=abfe321f47cddd0d148052e3825f86d3},
-	type = {Article},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 25; All Open Access, Green Open Access}
-}
-
-@article{Zhang2024E5,
-	author = {Zhang, Ketao and Chermprayong, Pisak and Xiao, Feng and Tzoumanikas, Dimos and Dams, Barrie and Kay, Sebastian and Kocer, Basaran Bahadir and Burns, Alec and Orr, Lachlan and Alhinai, Talib and Choi, Christopher and Darekar, Durgesh Dattatray and Li, Wenbin and Hirschmann, Steven and Soana, Valentina and Ngah, Shamsiah Awang and Grillot, Clément and Sareh, Sina and Choubey, Ashutosh and Margheri, Laura and Pawar, Vijay M. and Ball, Richard J. and Williams, Chris and Shepherd, Paul and Leutenegger, Stefan and Stuart-Smith, Robert and Kovac, Mirko},
-	title = {Correction to: Aerial additive manufacturing with multiple autonomous robots (Nature, (2022), 609, 7928, (709-717), 10.1038/s41586-022-04988-4)},
-	year = {2024},
-	journal = {Nature},
-	volume = {626},
-	number = {7998},
-	pages = {E5},
-	doi = {10.1038/s41586-024-07030-x},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85182838625&doi=10.1038%2fs41586-024-07030-x&partnerID=40&md5=7262cbc42e02cddd0ff7bd532105455d},
-	type = {Erratum},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 0; All Open Access, Bronze Open Access}
-}
-
-@CONFERENCE{Hauf20231298,
-	author = {Hauf, Fabian and Kocer, Basaran Bahadir and Slatter, Alan and Nguyen, Hai-Nguyen and Pang, Oscar and Clark, Ronald and Johns, Edward and Kovac, Mirko},
-	title = {Learning Tethered Perching for Aerial Robots},
-	year = {2023},
-	journal = {Proceedings - IEEE International Conference on Robotics and Automation},
-	volume = {2023-May},
-	pages = {1298 – 1304},
-	doi = {10.1109/ICRA48891.2023.10161135},
-	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85168671257&doi=10.1109%2fICRA48891.2023.10161135&partnerID=40&md5=2b2795762a42bb11cba4786d3d61e096},
-	type = {Conference paper},
-	publication_stage = {Final},
-	source = {Scopus},
-	note = {Cited by: 9; All Open Access, Green Open Access}
+@inproceedings{karasahin2025maintainingplasticityreinforcementlearning,
+      title={Maintaining Plasticity in Reinforcement Learning: A Cost-Aware Framework for Aerial Robot Control in Non-stationary Environments}, 
+      author={Ali Tahir Karasahin and Ziniu Wu and Basaran Bahadir Kocer},
+      year={2025},
+      eprint={2503.00282},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      selected = {false},
+      abbr  = {arXiv},
+      website = {https://aerialroboticsgroup.github.io/rl-plasticity-project/},
+      video = {https://youtu.be/Jg9-Gt8dlBU},
+      arxiv={https://arxiv.org/abs/2503.00282}, 
 }
 
 
-
-@article{unal2023meta,
-	abbr         = {TMLR},
-	title        = {TEMPLATE},
-	author       = {T Test},
-	year         = {1700},
-	journal      = tmlr,
-	url          = {https://openreview.net/forum?id=},
-	html         = {https://openreview.net/forum?id=},
-	selected     = {false},
-	bibtex_show  = {true},
-	abstract     = {Continual learning is a machies two uniquely important concepts in machine learning, namely "replay buffer" and "meta learning", aiming to exploit the best of two worlds. In this method, the model weights are initially computed by using the current task dataset. Next, the dataset of the current task is merged with the stored samples from the earlier tasks and the model weights are updated using the combined dataset. This aids in preventing the model weights converging to the optimal parameters of the current task and enables the preservation of information from earlier tasks. We choose to adapt our technique to graph data structure and the task of node classification on graphs. We introduce MetaCLGraph, which outperforms the baseline methods over various graph datasets including Citeseer, Corafull, Arxiv, and Reddit. This method illustrates the potential of combining replay buffer and meta learning in the field of continual learning on graphs.}
+@inproceedings{li2025tendondrivengrasperdesignaerial,
+      title={Tendon-driven Grasper Design for Aerial Robot Perching on Tree Branches}, 
+      author={Haichuan Li and Ziang Zhao and Ziniu Wu and Parth Potdar and Long Tran and Ali Tahir Karasahin and Shane Windsor and Stephen G. Burrow and Basaran Bahadir Kocer},
+      year={2025},
+      eprint={2503.00214},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      selected = {false},
+      abbr  = {arXiv},
+      website = {https://aerialroboticsgroup.github.io/branch-perching-project/},
+      video = {https://youtu.be/aF2r28RJzEg},
+      arxiv={https://arxiv.org/abs/2503.00214}, 
 }
+
