--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,7 +23,7 @@
       eprint={2503.00282},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
-      selected = {false},
+      selected = {true},
       abbr  = {arXiv},
       website = {https://aerialroboticsgroup.github.io/rl-plasticity-project/},
       video = {https://youtu.be/Jg9-Gt8dlBU},
@@ -38,7 +38,7 @@
       eprint={2503.00214},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
-      selected = {false},
+      selected = {true},
       abbr  = {arXiv},
       website = {https://aerialroboticsgroup.github.io/branch-perching-project/},
       video = {https://youtu.be/aF2r28RJzEg},
