--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,7 +27,8 @@
       abbr  = {arXiv},
       website = {https://aerialroboticsgroup.github.io/rl-plasticity-project/},
       video = {https://youtu.be/Jg9-Gt8dlBU},
-      arxiv={https://arxiv.org/abs/2503.00282}, 
+      preview={2025-rl.jpg},
+      arxiv={2503.00282}, 
 }
 
 
@@ -42,6 +43,7 @@
       abbr  = {arXiv},
       website = {https://aerialroboticsgroup.github.io/branch-perching-project/},
       video = {https://youtu.be/aF2r28RJzEg},
-      arxiv={https://arxiv.org/abs/2503.00214}, 
+      preview={2025-perch.png}
+      arxiv={2503.00214}, 
 }
 
