--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -43,7 +43,7 @@
       abbr  = {arXiv},
       website = {https://aerialroboticsgroup.github.io/branch-perching-project/},
       video = {https://youtu.be/aF2r28RJzEg},
-      preview={2025-perch.png}
+      preview={2025-perch.png},
       arxiv={2503.00214}, 
 }
 
